Rough code cleanup - Improved inventory API - Added SimpleScoreboard - Removed ServerPing features (See SimplePackets) - General update to 1.19