@@ -12,11 +12,11 @@ import java.net.URLDecoder;
 import java.net.UnknownHostException;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
-import java.nio.charset.StandardCharsets;
 import me.tvhee.tvheeapi.api.TvheeAPI;
+import me.tvhee.tvheeapi.api.command.CommandSender;
 import me.tvhee.tvheeapi.api.exception.DebugMessage;
 import me.tvhee.tvheeapi.api.exception.TvheeAPIInternalException;
-import me.tvhee.tvheeapi.api.files.CustomFile;
+import me.tvhee.tvheeapi.api.file.CustomFile;
 import me.tvhee.tvheeapi.api.plugin.TvheeAPIPlugin;
 import me.tvhee.tvheeapi.api.scheduler.SchedulerTime;
 import me.tvhee.tvheeapi.core.TvheeAPICore;
@@ -37,13 +37,13 @@ public abstract class SpigotUpdateChecker
 		return autoUpdate;
 	}
 
-	public abstract void onUpdateAvailable(String oldVersion, String newVersion);
+	public abstract void onUpdateAvailable(CommandSender sender, String oldVersion, String newVersion);
 
-	public abstract void onUpdateDownloaded();
+	public abstract void onUpdateDownloaded(CommandSender sender);
 
-	public abstract void onUpdateFinished();
+	public abstract void onUpdateFinished(CommandSender sender);
 
-	public final UpdateState checkForUpdates()
+	public final UpdateState checkForUpdates(CommandSender sender)
 	{
 		try
 		{
@@ -53,47 +53,44 @@ public abstract class SpigotUpdateChecker
 			HttpURLConnection connection = (HttpURLConnection) new URL("https://api.spigotmc.org/legacy/update.php?resource=" + resourceId).openConnection();
 			connection.setRequestMethod("GET");
 
-			final BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+			BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 			String newVersion = reader.readLine();
-			final String currentVersion = TvheeAPIPlugin.getInstance().getDescription().getVersion();
+			String currentVersion = TvheeAPIPlugin.getInstance().getDescription().getVersion();
 
 			if(newVersion.isEmpty())
 				return UpdateState.ERROR;
 
 			if(isNewerVersion(currentVersion, newVersion) && !currentVersion.contains("SNAPSHOT") && !currentVersion.contains("DEV"))
 			{
-				onUpdateAvailable(currentVersion, newVersion);
+				onUpdateAvailable(sender, currentVersion, newVersion);
 
 				if(!autoUpdate)
 					return UpdateState.AVAILABLE;
 
-				final ReadableByteChannel channel;
-
 				connection = (HttpURLConnection) new URL("https://api.spiget.org/v2/resources/" + resourceId + "/download").openConnection();
 				connection.setRequestProperty("User-Agent", TvheeAPIPlugin.getInstance().getDescription().getPluginName());
-				channel = Channels.newChannel(connection.getInputStream());
+				ReadableByteChannel channel = Channels.newChannel(connection.getInputStream());
 
-				final String path = DebugMessage.class.getProtectionDomain().getCodeSource().getLocation().getPath();
-				final String decodedPath = URLDecoder.decode(path, StandardCharsets.UTF_8);
-				final CustomFile thisJarFile = new CustomFile(decodedPath);
-				final CustomFile destination = new CustomFile(thisJarFile.getParentFile(), TvheeAPIPlugin.getInstance().getDescription().getPluginName() + " V" + newVersion + ".jar");
-				final FileOutputStream output = new FileOutputStream(destination);
+				String path = DebugMessage.class.getProtectionDomain().getCodeSource().getLocation().getPath();
+				String decodedPath = URLDecoder.decode(path, "UTF-8");
+				CustomFile thisJarFile = new CustomFile(decodedPath);
+				CustomFile destination = new CustomFile(thisJarFile.getParentFile(), TvheeAPIPlugin.getInstance().getDescription().getPluginName() + " V" + newVersion + ".jar");
+				FileOutputStream output = new FileOutputStream(destination);
 
 				output.getChannel().transferFrom(channel, 0, Long.MAX_VALUE);
 				output.flush();
 				output.close();
 
-				onUpdateDownloaded();
+				onUpdateDownloaded(sender);
 
 				TvheeAPI.getInstance().getScheduler().schedule(() -> ((TvheeAPICore) TvheeAPI.getInstance()).updatePluginFile(destination), 1, SchedulerTime.SECONDS);
-
 				File fileRemover = new File(TvheeAPIPlugin.getInstance().getDataFolder().getParentFile(), "TvheeAPI-FileRemover.txt");
 
 				FileWriter fileWriter = new FileWriter(fileRemover);
 				fileWriter.write(thisJarFile.getAbsolutePath());
 				fileWriter.close();
 
-				onUpdateFinished();
+				onUpdateFinished(sender);
 				return UpdateState.INSTALLED;
 			}
 			else
@@ -101,18 +98,18 @@ public abstract class SpigotUpdateChecker
 				return UpdateState.LATEST_VERSION;
 			}
 		}
-		catch(final UnknownHostException ex)
+		catch(UnknownHostException ex)
 		{
 			TvheeAPIPlugin.getInstance().getLogger().info("Could not check for update from " + ex.getMessage());
 		}
-		catch(final IOException ex)
+		catch(IOException ex)
 		{
 			if(ex.getMessage().startsWith("Server returned HTTP response code:"))
 				TvheeAPIPlugin.getInstance().getLogger().info("Could not check for update, SpigotMC site appears to be down (or unaccessible): " + ex.getMessage());
 			else
 				throw new TvheeAPIInternalException(getClass(), "download", "IOException performing update from SpigotMC.org check!");
 		}
-		catch(final Exception ex)
+		catch(Exception ex)
 		{
 			throw new TvheeAPIInternalException(getClass(), "download", "Unknown error performing update from SpigotMC.org check!");
 		}
@@ -120,18 +117,15 @@ public abstract class SpigotUpdateChecker
 		return UpdateState.ERROR;
 	}
 
-	private boolean isNewerVersion(final String current, final String remote)
+	protected boolean isNewerVersion(String current, String remote)
 	{
-		if(remote.contains("-LEGACY"))
-			return false;
-
 		String[] currParts = current.split("-")[0].split("\\.");
 		String[] remoteParts = remote.split("-")[0].split("\\.");
 
 		if(currParts.length != remoteParts.length)
 		{
-			final boolean olderIsLonger = currParts.length > remoteParts.length;
-			final String[] modifiedParts = new String[olderIsLonger ? currParts.length : remoteParts.length];
+			boolean olderIsLonger = currParts.length > remoteParts.length;
+			String[] modifiedParts = new String[olderIsLonger ? currParts.length : remoteParts.length];
 
 			for(int i = 0; i < (olderIsLonger ? currParts.length : remoteParts.length); i++)
 				modifiedParts[i] = olderIsLonger ? remoteParts.length > i ? remoteParts[i] : "0" : currParts.length > i ? currParts[i] : "0";
